# linearaalgerbra

./: CMakeLists.txt  ColVector.h  Matrix.h  Readme.md  RowVector.h  main.cpp  test.cc
_basement/: test.cc
include/: ColVector.h  Determinate.h  DirectCosineMatrix.h  FixMemory.h  Matrix.h  Quaternion.h  RowVector.h  Utils.h  Vector.h  common.h
main/: main.cpp
test/: ColVectorTest.cc  FixedMemoryTest.cc  MatrixTest.cc  RowVectorTeset.cc  RowVectorTest.cc  VectorTests.cc
